--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ resources/.DS_Store
 .DS_Store
 resources/magic-egg-allinone-exporter.mse-export-template/.DS_Store
 resources/magic-egg-allinone-exporter.mse-export-template/.DS_Store
+cards/2HU/149_Bad Apple.html.bak
+resources/gradients.txt.bak
+cards/2HU/149_Bad Apple.html.bak
