--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ resources/magic-egg-allinone-exporter.mse-export-template/.DS_Store
 cards/2HU/149_Bad Apple.html.bak
 resources/gradients.txt.bak
 cards/2HU/149_Bad Apple.html.bak
+scripts/print_html_for_search.py.bak
