last tweak I hope

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ cards/2HU/149_Bad Apple.html.bak
 resources/gradients.txt.bak
 cards/2HU/149_Bad Apple.html.bak
 scripts/print_html_for_search.py.bak
+previews/R&S.html
